add pdo_pgsql dependency

--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -23,6 +23,7 @@ RUN apk add --no-cache \
   php83-opcache \
   php83-openssl \
   php83-pcntl \
+  php83-pdo_pgsql \
   php83-pgsql \
   php83-phar \
   php83-session \
