only do one for now

--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -12,8 +12,8 @@ jobs:
         include:
           - image: aniftyco/php
             context: php
-          - image: aniftyco/laravel
-            context: laravel
+          # - image: aniftyco/laravel
+          #   context: laravel
     steps:
       - name: Checkout
         uses: actions/checkout@v3
